code/tui/snapshots/inline/state/config_english_punctuation_details_chinese.snap
---
source: code/tui/src/app/state_tests.rs
expression: details
---
─ 配 置  ─────────────────────────────────────────────────────────────────────────
                                                                                
   通 用     提 供 商     议 题     网 络                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ 搜 索 配 置                                                                  │  
  ╰──────────────────────────────────────────────────────────────────────────╯  
  7 项  上 方                                                                      
  按 键 提 示 风 格                                                           对 比     
  屏 幕 模 式                                                             inline    
  记 忆                                                                   关 闭  +  
  自 动 获 取  Git 更 新                                                      关 闭  +  
  Git 获 取 间 隔                                                           180s    
  Git 分 支 标 识                                                      Powerline    
  顾 问                                                                   关 闭     
> 始 终 使 用 半 角 标 点 （ 仅 中 文 ）                                             开 启  -  
    将 键 入 的 中 文 标 点 转 为 半 角 ， 支 持 按 住  Shift 输 入 。                              
    支 持 这 些 键 盘 标 点 的 全 角 形 式 ：                                                 
    !"#$%&'()*+,-./:;<=>?@[\]^_`{|}~                                            
    其 他 转 换 ： 、 →/  。 →.  【 】 →[]  “”→"  ‘’→'                                   
    中 文 文 字 、 其 他 符 号 、 粘 贴 内 容 和 已 有 文 本 保 持 原 样 。                             
  听 写 快 捷 键                                                              off    
  听 写 按 键                                                             ctrl+g    
                                                                                
  Enter 更 改  · r 重 置  · ←/→ 详 情  · Tab 标 签 页  · / 搜 索  · Esc 关 闭
