code/tui/snapshots/inline/state/dictation_download_cancelled_inline_zh.snap
---
source: code/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                  听 写 已 停 止 。   
────────────────────────────────────────────────────────────────────────────────
> keep draft                                                                    
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ 手 动
