code/tui/snapshots/inline/state/dictation_download_inline_zh.snap
---
source: code/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  听 写  · 正 在 下 载  model_quant.onnx： 2.0 MiB · ctrl+c 停 止 听 写                    
────────────────────────────────────────────────────────────────────────────────
> keep draft                                                                    
────────────────────────────────────────────────────────────────────────────────
                                                                                
  ⏸ 手 动
